trying to implement a spacing fix

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -368,7 +368,7 @@ section {
 	}
 
 	@include mq(laptop) {
-		margin-top: 20px;
+		margin-top: 50px;
 	}
 }
 
